--- a/src/scss/critical.scss
+++ b/src/scss/critical.scss
@@ -71,6 +71,15 @@ h4 {
 // Import blocks
 @import 'blocks/definition-group';
 @import 'blocks/tags-list';
+@import 'blocks/site-foot';
+@import 'blocks/site-head';
+@import 'blocks/nav';
+@import 'blocks/button';
+@import 'blocks/skip-link';
+@import 'blocks/cta';
+@import 'blocks/page-header';
+@import 'blocks/people';
+@import 'blocks/person';
 
 // Import utilities
 @import 'utilities/dot-shadow';
@@ -81,3 +90,5 @@ h4 {
 @import 'utilities/site-wrap';
 @import 'utilities/visually-hidden';
 @import 'utilities/wrapper';
+@import 'utilities/headline';
+@import 'utilities/auto-grid';
